@@ -22,7 +22,7 @@
   <email>chuck@horde.org</email>
   <active>yes</active>
  </lead>
- <date>2014-03-16</date>
+ <date>2014-03-22</date>
  <version>
   <release>6.2.0</release>
   <api>6.2.0</api>
@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Display unread message count in title via favicon bubbles, if browser supports.
 * [mms] Abstracted maillog code.
 * [mms] Enable configuration of IMAP cache lifetime for Horde_Cache and Hashtable backends.
 * [mms] Only refresh quota information when switching to a mailbox the first time.
@@ -108,6 +109,7 @@
     </dir> <!-- /js/ckeditor -->
     <dir name="external">
      <file name="base64.js" role="horde" />
+     <file name="tinycon.js" role="horde" />
     </dir> <!-- /js/external -->
     <dir name="jquery.mobile">
      <dir name="plugins">
@@ -1578,6 +1580,7 @@
    <install as="imp/js/ckeditor/pasteattachment.js" name="js/ckeditor/pasteattachment.js" />
    <install as="imp/js/ckeditor/pasteignore.js" name="js/ckeditor/pasteignore.js" />
    <install as="imp/js/external/base64.js" name="js/external/base64.js" />
+   <install as="imp/js/external/tinycon.js" name="js/external/tinycon.js" />
    <install as="imp/js/jquery.mobile/plugins/listviewtaphold.js" name="js/jquery.mobile/plugins/listviewtaphold.js" />
    <install as="imp/js/jquery.mobile/plugins/textchange.js" name="js/jquery.mobile/plugins/textchange.js" />
    <install as="imp/lib/.htaccess" name="lib/.htaccess" />
